# msb-priority-reduction-rule

./: README.md  msb-priority-reduction-rule  pyproject.toml  touch simulation_analysis.ipynb
notebooks/: simulation_analysis.ipynb
src/msb_priority_reduction/: __init__.py  __main__.py  core.py
src/msb_priority_reduction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_core.py
