[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msb-priority-reduction"
version = "1.0.0"
description = "Round-robin priority reduction algorithm"
authors = [
    {name = "Mehsad Bahar", email = "your-email@example.com"},
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "matplotlib", "jupyter"]
